# easydock

./: .gitignore  pyproject.toml
containers/: compose.yml
containers/carsidock/: Dockerfile  entrypoint.sh
containers/surfdock/: Dockerfile  entrypoint.sh
containers/unipka/: Dockerfile  entrypoint.sh
containers/vinagpu/: Dockerfile  entrypoint.sh
tests/: 3WZD-receptor-pdb4amber.pdbqt  3WZD-receptor.pdbqt  README.md  config.txt  config.yml  fixpka.param  input.smi  input_fixpka.smi  input_fixpka_omega.sdf  input_fixpka_omega_out.pdbqt  my_receptor.pdbqt  oeomega_pose_log.txt  oeomega_pose_parm.txt  oeomega_pose_rpt.csv  output.db  stdout_renum.txt  test-qvina.sh
tests/ligands/: lenvatinib.pdbqt  lenvatinib_out.pdbqt  sorafenib.pdbqt
