[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "easydock"
dynamic = ["version"]
description = "EasyDock Python module to facilitate molecular docking"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Pavel Polishchuk", email = "pavel_polishchuk@ukr.net" },
    { name = "Guzel Minibaeva" },
    { name = "Aleksandra Ivanova" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = ["meeko>=0.7.1,<0.8"]

[project.optional-dependencies]
rdkit = ["rdkit>=2017.09"]

[project.scripts]
easydock = "easydock.run_dock:main"
easydock_bust = "easydock.easydock_bust:main"
easydock_plif = "easydock.easydock_plif:main"
get_sdf_from_easydock = "easydock.get_sdf_from_dock_db:main"
make_clean_copy = "easydock.make_clean_copy:main"
run_dock = "easydock.run_dock_obsolete:main"

[tool.setuptools.packages.find]
include = ["easydock*"]

[tool.vcs-versioning]
version_file = "easydock/_version.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
easydock = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
rdkit = { features = ["rdkit"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
rdkit = ">=2026.3.3,<2027"
pyyaml = ">=6.0.3,<7"
scipy = ">=1.18.0,<2"
gemmi = ">=0.7.5,<0.8"
scikit-learn = ">=1.9.0,<2"
prody = ">=2.6.1,<3"
